--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
+    "nodemon": "^2.0.19",
     "validator": "^13.7.0"
   }
 }
