--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-loader-spinner": "^5.3.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
